--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,5 @@
 <html>
-<head>
-  <title>Map Element Library Manager</title>
-</head>
-<body>
-</body>
+  <head>
+  <meta http-equiv="refresh" content="0; URL=/DISP-MELM/login/">
+  </head>
 </html>
