--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,9 @@
 <html>
-  <head>
-  <meta http-equiv="refresh" content="0; URL=/DISP-MELM/login/">
-  </head>
+<head>
+<meta http-equiv="refresh" content="0; URL=/DISP-MELM/login/">
+<title>Welcome</title>
+</head>
+<body>
+  <p>Welcome</p>
+</body>
 </html>
