--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; URL=/DISP-MELM/login/">
+<meta http-equiv="refresh" content="0; URL=login/">
 </head>
 </html>
